Added target hit simulation

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,11 +24,11 @@ build_flags =
 	-DBAUD_RATE=${env:nodemcu-32s.monitor_speed}
 
 [env:master]
-build_src_filter = +${env.build_src_filter} -<main_slave.cpp> -<pwm.*> -<android/*> +<web*>
+build_src_filter = +${env.build_src_filter} -<main_slave.cpp> -<pwm.*> -<android/*> +<target*> +<web*>
 build_flags = 
-	-DWIFI_MODE=1
+	-DWIFI_MODE=0   ; AP Connection: 0 ->external 1->ESP32
 	-DANAIN=34
-	-DLOCAL=\"robot\"
+	-DLOCAL=\"robot\"   ; mDNS name... access as robot.local
 	-DSLAVE_ESPNOW=0
 	${env.build_flags}
 lib_deps = 
@@ -37,7 +37,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.4
 
 [env:slave]
-build_src_filter = +${env.build_src_filter} -<main_master.cpp> -<wifi*> -<web*> -<espnow_master*>  -<android/*> +<pwm.*>
+build_src_filter = +${env.build_src_filter} -<main_master.cpp> -<wifi*> -<web*> -<espnow_master*>  -<android/*> -<target*> +<pwm.*>
 build_flags = 
 	${env.build_flags}
 lib_deps = bblanchon/ArduinoJson@^6.21.4
